fix: add option to control content alignment

--- a/src/QUI/Menu/Controls/Tabs.css
+++ b/src/QUI/Menu/Controls/Tabs.css
@@ -283,6 +283,8 @@
 
 .quiqqer-tabsAdvanced-content-body {
     grid-area: content;
+    display: flex;
+    align-items: var(--_qui-menu-controls-tabs-contentPos);
 }
 
 .quiqqer-tabsAdvanced-content-body-inner {
